objects/myV2MOM__Measure_Team__c.object
<CustomObject>
    <fields>
        <fullName>myV2MOM__Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__MeasureTeamChatFeedId__c</fullName>
        <label>MeasureTeamChatFeedId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Measure__c</fullName>
        <label>Measure</label>
        <referenceTo>myV2MOM__Measure__c</referenceTo>
        <relationshipLabel>Measure Teams</relationshipLabel>
        <relationshipName>Measure_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Measure_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Behind Schedule</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>myV2MOM__Target_Value__c</fullName>
        <formula>myV2MOM__Measure__r.myV2MOM__Target_Value__c  * myV2MOM__Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>myV2MOM__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Measure Team</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>myV2MOM__All</fullName>
        <columns>NAME</columns>
        <columns>myV2MOM__Measure__c</columns>
        <columns>myV2MOM__Member__c</columns>
        <columns>myV2MOM__Percentage__c</columns>
        <columns>myV2MOM__Target_Value__c</columns>
        <columns>myV2MOM__Type__c</columns>
        <columns>myV2MOM__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MTM-{0}</displayFormat>
        <label>Measure Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measure Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>